--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,8 +52,11 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/delete.png
+    - assets/get.png
+    - assets/post.png
+    - assets/update.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
