--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,13 @@ environment:
 dependencies:
   bloc: ^8.1.4
   cupertino_icons: ^1.0.8
+  dropdown_search: ^5.0.6
   equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  font_awesome_flutter: ^10.7.0
+  google_nav_bar: ^5.0.6
   http: ^1.2.2
   shared_preferences: ^2.3.2
 
