--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   google_nav_bar: ^5.0.6
   http: ^1.2.2
+  intl: ^0.19.0
   shared_preferences: ^2.3.2
 
 dev_dependencies:
@@ -60,6 +61,16 @@ flutter:
     - assets/get.png
     - assets/post.png
     - assets/update.png
+    - assets/discount.png
+    - assets/fashion.png
+    - assets/happy-hour.png
+    - assets/pay-later.png
+    - assets/smartphone.png
+    - assets/login.png
+    - assets/google.png
+    - assets/facebook.png
+
+
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
