add feed page, login validation & cart shoping view

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,6 +5,14 @@ plugins {
     id "dev.flutter.flutter-gradle-plugin"
 }
 
+// Add for Exoplayer (FeedPage)
+dependencies {
+    implementation('com.google.android.exoplayer:exoplayer:2.19.1')
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.18.1'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.18.1'
+    implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.18.1'
+}
+
 android {
     namespace = "com.example.flutter_consume_api"
     compileSdk = flutter.compileSdkVersion
