--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.4
+  card_swiper: ^3.0.1
+  chewie: ^1.8.4
   cupertino_icons: ^1.0.8
   dropdown_search: ^5.0.6
   equatable: ^2.0.5
@@ -40,6 +42,7 @@ dependencies:
   http: ^1.2.2
   intl: ^0.19.0
   shared_preferences: ^2.3.2
+  video_player: ^2.9.1
 
 dev_dependencies:
   flutter_lints: ^4.0.0
@@ -69,8 +72,6 @@ flutter:
     - assets/login.png
     - assets/google.png
     - assets/facebook.png
-
-
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
