--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  another_flutter_splash_screen: ^1.2.1
   bloc: ^8.1.4
   card_swiper: ^3.0.1
   chewie: ^1.8.4
@@ -41,6 +42,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   http: ^1.2.2
   intl: ^0.19.0
+  lottie: ^3.1.3
   shared_preferences: ^2.3.2
   video_player: ^2.9.1
 
